--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ deploy:
   on:
     branch: main
   access_key_id: "$AWS_ACCESS_KEY"
-  secret_access_key: "$AWS_SERET_KEY"
+  secret_access_key: "$AWS_SECRET_KEY"
